custom empty goods product, purchase and sales

--- a/custom_emptygoods/views/product.xml
+++ b/custom_emptygoods/views/product.xml
@@ -5,7 +5,7 @@
       <field name="inherit_id" ref="product.product_template_only_form_view"/>
       <field name="arch" type="xml">
           <field name="detailed_type" position="after">
-            <field name="fullgood_product_id" attrs="{'invisible': [('detailed_type', '!=', 'emptygoods')]}"/>
+            <field name="emptygoods_product_id" attrs="{'invisible': [('detailed_type', '!=', 'product')]}"/>
           </field>
       </field>
     </record>
